--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nuxt-calendly": "^0.1.21",
     "nuxt-gtag": "^3.0.2",
     "nuxt-meta-pixel": "^2.0.2",
+    "nuxt-purgecss": "^2.0.0",
     "nuxt-security": "^2.2.0",
     "pg": "^8.13.3",
     "slugify": "^1.6.6",
